tests/ui_unstable/missing_file_include_wchz.stderr
error: couldn't read $DIR/tests/ui_unstable/missing_file: No such file or directory (os error 2)
 --> $DIR/missing_file_include_wchz.rs:3:48
  |
3 | const MISSING_FILE: &[wchar_t] = include_wchz!("missing_file");
  |                                                ^^^^^^^^^^^^^^
