tests/ui_unstable/missing_file_include_wchz.rs
use wchar::{include_wchz, wchar_t};

const MISSING_FILE: &[wchar_t] = include_wchz!("missing_file");

fn main() {}
